--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dev_dependencies:
   flutter_screenutil: any
   flutter_bloc: ^8.1.3
   http: ^1.1.0
+  webview_flutter_plus: ^0.3.0+2
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
